Updated the toolchain (addressed tickets #129, #133, #158, #159, #164, #170, #179).
Removed Ruby Topaz and Rubinous as these are not the active projects anymore (the latter has some activity,
but it neither can be properly compiled nor compatible with the used Ruby code).

Fixed memory consumption calculation to include children processes (e.g. for Scala as it invokes the actual JVM process as a child).

Minor tweaks to BF tests (normalizing data types and allocations if possible).

Applied changes from PR #157, #167, #177, #175.

Added relevant warming up for .NET projects (issue #154), however it barely changed the results.

Replaced D Mir GLAS (not supported anymore) with D lubeck (another linear algebra library also utilizing D Mir) test.